{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 14,
  "lineage": "67cb4eae-edc2-118b-be0d-aeaa05eddf98",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "EIP_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b2e223d075d73f8c",
            "arn": "arn:aws:ec2:us-east-1:466650688415:elastic-ip/eipalloc-0b2e223d075d73f8c",
            "associate_with_private_ip": "10.0.0.10",
            "association_id": "eipassoc-043035b78646c33ca",
            "domain": "vpc",
            "id": "eipalloc-0b2e223d075d73f8c",
            "instance": "i-0ee7995d1dac6a08b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06846ba17c338fc3b",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-3-95-144-130.compute-1.amazonaws.com",
            "public_ip": "3.95.144.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP_A"
            },
            "tags_all": {
              "Name": "EIP_A"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_iam_instance_profile.linuxuser_Profile",
            "aws_iam_role.linuxuser",
            "aws_instance.Instance_A",
            "aws_internet_gateway.GW_linux",
            "aws_network_interface.ENI_A",
            "aws_security_group.SG_linux",
            "aws_subnet.Subnet_linux",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Instance_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:466650688415:instance/i-0ee7995d1dac6a08b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "linuxuser-profile",
            "id": "i-0ee7995d1dac6a08b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linuxuser",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-06846ba17c338fc3b"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06846ba17c338fc3b",
            "private_dns": "ip-10-0-0-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0908f0d1463bfd2a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04422b118be973411",
            "tags": {
              "Name": "linuxserver_1.0"
            },
            "tags_all": {
              "Name": "linuxserver_1.0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06fd9bcba04df1a4d"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.linuxuser_Profile",
            "aws_iam_role.linuxuser",
            "aws_internet_gateway.GW_linux",
            "aws_network_interface.ENI_A",
            "aws_security_group.SG_linux",
            "aws_subnet.Subnet_linux",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "GW_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466650688415:internet-gateway/igw-02ed07dfee66e79ec",
            "id": "igw-02ed07dfee66e79ec",
            "owner_id": "466650688415",
            "tags": {
              "Name": "IG_linux"
            },
            "tags_all": {
              "Name": "IG_linux"
            },
            "vpc_id": "vpc-086df936b1d92154a"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "ENI_A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466650688415:network-interface/eni-06846ba17c338fc3b",
            "id": "eni-06846ba17c338fc3b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:7d:af:e7:cf:49",
            "owner_id": "466650688415",
            "private_ip": "10.0.0.10",
            "private_ip_list": [
              "10.0.0.10"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.10"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-06fd9bcba04df1a4d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04422b118be973411"
          },
          "dependencies": [
            "aws_internet_gateway.GW_linux",
            "aws_security_group.SG_linux",
            "aws_subnet.Subnet_linux",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466650688415:route-table/rtb-0a46b2850f04ebb31",
            "id": "rtb-0a46b2850f04ebb31",
            "owner_id": "466650688415",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ed07dfee66e79ec",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ed07dfee66e79ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT_linux"
            },
            "tags_all": {
              "Name": "RT_linux"
            },
            "timeouts": null,
            "vpc_id": "vpc-086df936b1d92154a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.GW_linux",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT_to_Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b30f838d96b67de6",
            "route_table_id": "rtb-0a46b2850f04ebb31",
            "subnet_id": "subnet-04422b118be973411"
          },
          "dependencies": [
            "aws_internet_gateway.GW_linux",
            "aws_route_table.RT_linux",
            "aws_subnet.Subnet_linux",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466650688415:security-group/sg-06fd9bcba04df1a4d",
            "description": "Allow SSH, HTTP, HTTPS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06fd9bcba04df1a4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "SG_linux",
            "name_prefix": "",
            "owner_id": "466650688415",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG_linux"
            },
            "tags_all": {
              "Name": "SG_linux"
            },
            "timeouts": null,
            "vpc_id": "vpc-086df936b1d92154a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Subnet_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466650688415:subnet/subnet-04422b118be973411",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04422b118be973411",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "466650688415",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet_Codewithmuh"
            },
            "tags_all": {
              "Name": "Subnet_Codewithmuh"
            },
            "vpc_id": "vpc-086df936b1d92154a"
          },
          "dependencies": [
            "aws_internet_gateway.GW_linux",
            "aws_vpc.A"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466650688415:vpc/vpc-086df936b1d92154a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f1735397aa2cf2f7",
            "default_route_table_id": "rtb-09043fb454d60201b",
            "default_security_group_id": "sg-0cefc36cd9ae08845",
            "dhcp_options_id": "dopt-0978b33839d4fc4c2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-086df936b1d92154a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09043fb454d60201b",
            "owner_id": "466650688415",
            "tags": {
              "name": "linuxvpc"
            },
            "tags_all": {
              "name": "linuxvpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:466650688415:vpc-endpoint/vpce-0d4b3076d15a1fa81",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-0d4b3076d15a1fa81",
            "owner_id": "466650688415",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "test"
            },
            "tags_all": {
              "Environment": "test"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-086df936b1d92154a"
          },
          "dependencies": [
            "aws_vpc.A"
          ]
        }
      ]
    }
  ]
}